--- a/index.html
+++ b/index.html
@@ -8,7 +8,62 @@
   <link rel="stylesheet" href="style.css">
   <title>Jeune Parent Etudiant</title>
 </head>
-<body>
-  
+<body class="container-fluid">
+  <header class="row">
+    <div class="col-10 logo navbar navbar-dark bg-light">
+      <a href="index.html"><img src="./img/logo.png" alt="Logo association JPE" width="50px" height="50" class="img-fluid"></a>
+      <span class="nom-logo">JPE</span>
+      <nav class="autre-menu navbar">
+        <div >
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+              <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+            </svg>
+          </form>
+        </div>
+      </nav>
+    </div>
+
+    </header>
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/digital-parents.jpg" class="d-block w-70" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./img/etudiants-cours.jpg" class="d-block w-70" alt="...">
+        </div>
+
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
+
+  <nav class="menu">
+
+  </nav>
+  <section class="first-section">
+    <article>
+
+    </article>
+  </section>
+  <section class="second-section">
+    <article>
+
+    </article>
+  </section>
+
+  <footer class="footer">
+
+  </footer>
 </body>
 </html>
