lien avec la deuxième page Evènement (even.html)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   
 
   <nav class="menu row d-flex justify-content-center">
-    <div class="col">
+    <div class="col-7">
       <ul class="nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
@@ -78,7 +78,7 @@
           <a class="nav-link" href="#">Proches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Evènements</a>
+          <a class="nav-link" href="even.html">Evènements</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">Enfants</a>
