mise en place d'un button dans le header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </div>
       </nav>
     </div>
-      
+      <div class="col">
+        <button></button>
+      </div>
     </header>
     
     <div id="demo" class="carousel slide" data-ride="carousel">
