lien blank (evenement )

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a class="nav-link" href="#">Proches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="even.html">Evènements</a>
+          <a class="nav-link" href="even.html" target="_blank">Evènements</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true">Enfants</a>
