--- a/even.html
+++ b/even.html
@@ -5,12 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
   crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styleEven.css">
   <title>Evenement</title>
 </head>
 <body>
-  <header>
-
-  </header>
+  <header class="row sticky-top">
+    <div class="col-10 logo navbar navbar-dark bg-light">
+      <a href="index.html"><img src="./img/logo.png" alt="Logo association JPE" width="50px" height="50" class="img-fluid"></a>
+      <span class="nom-logo">JPE</span>
+      <nav class="autre-menu navbar">
+        <div >
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+              <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+            </svg>
+          </form>
+        </div>
+      </nav>
+    </div>
+      <div class="col">
+        <button></button>
+      </div>
+    </header>
 </body>
 </html>
