mise en place d'un button pour decouvrir les stages

--- a/index.html
+++ b/index.html
@@ -121,13 +121,22 @@
       </div>
     </article>
   </section>
+  <!-- Section enfants -->
   <section class="row second-section ">
     <article class="col article-red">
       <img src="./img/children_PNG18029.png" alt="enfant" class="enfant">
-
+      <span class="annee">2000</span>
+      <span class="chiffres">
+        <ul>
+          <li>2592 ENFANTS</li>
+          <li>300 STAGES</li>
+          <li>18 HOPITAUX</li>
+        </ul>
+        <button type="button" class="button_stages">Découvrir les stages</button>
+      </span>
     </article>
   </section>
-
+  <!-- Section Etudiants -->
   <section class="row section-trois">
     <article class="col article-blue">
       <img src="./img/etudiants.png"  alt="parents" class="parents" > 
