--- a/index.html
+++ b/index.html
@@ -140,11 +140,19 @@
   <section class="row section-trois">
     <article class="col article-blue">
       <img src="./img/etudiants.png"  alt="parents" class="parents" > 
+      <span class="annee_deux">2019</span>
+      <span class="chiffres_deux">
+        <ul>
+          <li>5080 PARENTS PRIS EN CHARGES</li>
+          <li>740 SEJOURS</li>
+        </ul>
+        <button type="button" class="button_sejour">Découvrir les sejours</button>
+      </span>
     </article>
   </section>
 
   <footer class="footer row">
-
+    
   </footer>
 </body>
 </html>
