--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container-fluid">
   <header class="row sticky-top">
-    <div class="col-10 logo navbar navbar-dark bg-light">
+    <div class="col logo navbar navbar-dark bg-light">
       <a href="index.html"><img src="./img/logo.png" alt="Logo association JPE" width="50px" height="50" class="img-fluid"></a>
       <span class="nom-logo">JPE</span>
       <nav class="autre-menu navbar">
@@ -25,9 +25,7 @@
         </div>
       </nav>
     </div>
-      <div class="col">
-        <button></button>
-      </div>
+      
     </header>
     
     <div id="demo" class="carousel slide" data-ride="carousel">
