mise en place de la grid sur la seconde page

--- a/even.html
+++ b/even.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="styleEven.css">
   <title>Evenement</title>
 </head>
-<body>
-  <header class="row sticky-top">
+<body class="grid">
+  <!-- grid Head -->
+  <header class="row sticky-top haud">
     <div class="col-10 logo navbar navbar-dark bg-light">
       <a href="index.html"><img src="./img/logo.png" alt="Logo association JPE" width="50px" height="50" class="img-fluid"></a>
       <span class="nom-logo">JPE</span>
@@ -30,10 +31,15 @@
         <button></button>
       </div>
     </header>
+    <!-- grid middle -->
+    <section class="milieur">
+      <article >
+        
+      </article>
+    </section>
 
-
-
-    <footer class="footer row grid-container">
+<!--   grid bottom   -->
+    <footer class="footer row grid-container bas">
       <span class="left">
         <h2>Suivez Nous</h2>
         <a href="https://www.instagram.com/accounts/login/" target="_blank">
