--- a/even.html
+++ b/even.html
@@ -125,29 +125,16 @@
         <div class="card bg-warning btn">
           <h5 class="card-title">Pau</h5>
           <div class="card-body text-center">
-            <p class="card-text">Some text inside the second card</p>
+            <p class="card-text">Inscription</p>
           </div>
         </div>
-        <div class="card bg-success">
+        <div class="card bg-success btn">
+          <h5 class="card-title">Lille</h5>
           <div class="card-body text-center">
-            <p class="card-text">Some text inside the third card</p>
+            <p class="card-text">Inscription</p>
           </div>
         </div>
-        <div class="card bg-danger">
-          <div class="card-body text-center">
-            <p class="card-text">Some text inside the fourth card</p>
-          </div>
-        </div>
-        <div class="card bg-light">
-          <div class="card-body text-center">
-            <p class="card-text">Some text inside the fifth card</p>
-          </div>
-        </div>
-        <div class="card bg-info">
-          <div class="card-body text-center">
-            <p class="card-text">Some text inside the sixth card</p>
-          </div>
-        </div>
+        
       </article>
     </section>
 
