media query page 2 (even)

--- a/even.html
+++ b/even.html
@@ -115,7 +115,7 @@
     </article>
     
       <article class="col-8 card avenir ">
-        <h4 class="text-center">Evènements avenir</h4>
+        <h4 class="text-center Evenement_title">Evènements avenir</h4>
         <div class="card bg-primary btn">
           <h5 class="card-title">Nante</h5>
           <div class="card-body text-center">
